ajout classe DataBase